don't store gradient but re-calculate on backward using gradient checkpointing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ipykernel
 pandas
-torch==1.13
-torchvision==0.14
+torch
+torchvision
 tensorboard
 optuna
 clip @ git+https://github.com/openai/CLIP.git
