--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,24 @@ ipykernel
 pandas
 torch
 torchvision
+torchaudio==2.0.2
 tensorboard
 optuna
 transformers
+dreifus
+tyro
+pymcubes
+trimesh
+pyvista
+pymeshlab
+chardet
+pyg_lib 
+torch_scatter 
+torch_sparse 
+torch_cluster 
+torch_spline_conv 
+-f https://data.pyg.org/whl/torch-2.0.0+cu117.html
 clip @ git+https://github.com/openai/CLIP.git
 -e ./NPHM
+-e ./MonoNPHM
 -e .
